[package]
name = "bojexec-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "blocking", "rustls-tls"] }
scraper = "0.23.1"
os_info = "3.10.0"
tokio = { version = "1.43.0", features = ["full"] }
html2md = "0.2.15"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
handlebars = "6.3.1"

[dev-dependencies]
tempfile = "3.17.1"